@@ -44,15 +44,6 @@ The given index ({0}) is out of bounds.
 doctype.not.supported = \
 Cannot create a SVG DocumentType object.
 
-css.parser.class = \
-The CSS parser class {0} cannot be found.
-
-css.parser.creation = \
-The CSS parser class '{0}' cannot be instantiated.
-
-css.parser.access = \
-The CSS parser class '{0}' cannot be accessed.
-
 noninvertiblematrix = \
 The matrix is not invertible.
 
